Update incident report content and structure

--- a/report.html
+++ b/report.html
@@ -5,37 +5,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#000000" />
 
-<title>Tap404 Incident Report</title>
-<meta name="description" content="Tap404 Incident Report — harmless glitch prank. You're safe 😈 Open the full report." />
-
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Tap404 Incident Report" />
-<meta property="og:description" content="Harmless glitch prank. You're safe 😈 Open the full report." />
-<meta property="og:url" content="https://xstajayx.github.io/phone-prank/report.html" />
-<meta property="og:image" content="https://xstajayx.github.io/phone-prank/og-tap404.png" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Tap404 Incident Report" />
-<meta name="twitter:description" content="Harmless glitch prank. You're safe 😈 Open the full report." />
-<meta name="twitter:image" content="https://xstajayx.github.io/phone-prank/og-tap404.png" />
+<title>Full Report</title>
+<meta name="description" content="Full report — you’re safe 😈" />
 
 <style>
   :root{ --g:#00ff66; --r:#ff0033; --bg:#000; --glass: rgba(0,0,0,.62); }
-  *{ box-sizing:border-box; -webkit-tap-highlight-color: transparent; }
+  *{ box-sizing:border-box; -webkit-tap-highlight-color:transparent; }
   body{
     margin:0; background:var(--bg); color:var(--g);
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Courier New", monospace;
-    overflow-x:hidden;
   }
-  .wrap{ max-width: 980px; margin: 0 auto; padding: 16px 14px calc(24px + env(safe-area-inset-bottom)); }
+  .wrap{
+    max-width: 980px;
+    margin: 0 auto;
+    padding: 16px 14px calc(24px + env(safe-area-inset-bottom));
+  }
   .card{
-    border-radius: 22px; border:1px solid rgba(0,255,102,.22);
+    border-radius: 22px;
+    border:1px solid rgba(0,255,102,.22);
     background: var(--glass);
     box-shadow: 0 0 0 1px rgba(0,255,102,.06), 0 24px 70px rgba(0,0,0,.55);
-    padding: 16px 14px; margin-top: 12px; position: relative; overflow:hidden;
+    padding: 16px 14px;
+    margin-top: 12px;
+    position: relative;
+    overflow:hidden;
   }
   .card::before{
-    content:""; position:absolute; inset:0;
+    content:"";
+    position:absolute; inset:0;
     background: repeating-linear-gradient(
       to bottom,
       rgba(0,255,102,.040),
@@ -45,137 +42,258 @@
     );
     opacity:.45; pointer-events:none; mix-blend-mode: screen;
   }
-  h1{ margin: 10px 0 4px; letter-spacing:.16em; text-transform: uppercase; font-size: clamp(20px, 5vw, 38px); position:relative; z-index:1; }
-  .sub{ margin:0 0 12px; color: rgba(0,255,102,.70); letter-spacing:.10em; text-transform: uppercase; font-size: 12px; position:relative; z-index:1; }
-  .stamp{
-    display:inline-block; margin-top: 8px; padding: 10px 12px;
-    border-radius: 14px; border:1px solid rgba(255,0,51,.38);
-    background: rgba(255,0,51,.08); color: rgba(255,0,51,.95);
-    letter-spacing:.18em; font-weight: 900; text-transform: uppercase;
+  h1{
+    margin: 10px 0 4px;
+    letter-spacing:.14em;
+    text-transform: uppercase;
+    font-size: clamp(18px, 4.4vw, 34px);
     position:relative; z-index:1;
   }
-  .p{ margin: 14px 0 0; color: rgba(0,255,102,.78); letter-spacing:.04em; line-height: 1.6; position:relative; z-index:1; }
-  .safe{
-    margin-top: 10px; padding: 12px 12px;
-    border-radius: 16px; border:1px solid rgba(0,255,102,.18);
-    background: rgba(0,255,102,.06); color: rgba(0,255,102,.82);
-    letter-spacing:.06em; line-height:1.55; position:relative; z-index:1;
+  .sub{
+    margin:0 0 12px;
+    color: rgba(0,255,102,.70);
+    letter-spacing:.10em;
+    text-transform: uppercase;
+    font-size: 12px;
+    position:relative; z-index:1;
   }
-  .row{ display:flex; gap: 10px; flex-wrap:wrap; margin-top: 14px; position: relative; z-index: 1; }
+  .pill{
+    display:inline-block;
+    margin-top: 8px;
+    padding: 10px 12px;
+    border-radius: 999px;
+    border:1px solid rgba(0,255,102,.18);
+    background: rgba(0,255,102,.06);
+    color: rgba(0,255,102,.88);
+    letter-spacing:.12em;
+    font-weight: 900;
+    text-transform: uppercase;
+    position:relative; z-index:1;
+  }
+  .stamp{
+    display:inline-block;
+    margin-top: 10px;
+    padding: 10px 12px;
+    border-radius: 14px;
+    border:1px solid rgba(255,0,51,.38);
+    background: rgba(255,0,51,.08);
+    color: rgba(255,0,51,.95);
+    letter-spacing:.18em;
+    font-weight: 900;
+    text-transform: uppercase;
+    position:relative; z-index:1;
+  }
+  .p{
+    margin: 14px 0 0;
+    color: rgba(0,255,102,.82);
+    letter-spacing:.03em;
+    line-height: 1.65;
+    position:relative; z-index:1;
+  }
+  .safe{
+    margin-top: 12px;
+    padding: 12px 12px;
+    border-radius: 16px;
+    border:1px solid rgba(0,255,102,.18);
+    background: rgba(0,255,102,.06);
+    color: rgba(0,255,102,.86);
+    letter-spacing:.05em;
+    line-height:1.55;
+    position:relative; z-index:1;
+  }
+  .row{ display:flex; gap:10px; flex-wrap:wrap; margin-top: 14px; position:relative; z-index:1; }
   .btn{
-    padding: 12px 14px; border-radius: 14px;
+    padding: 12px 14px;
+    border-radius: 14px;
     border:1px solid rgba(0,255,102,.26);
     background: rgba(0,255,102,.10);
     color: rgba(0,255,102,.95);
-    font-weight: 900; letter-spacing:.14em;
-    text-transform: uppercase; cursor:pointer; font-family: inherit;
+    font-weight: 900;
+    letter-spacing:.14em;
+    text-transform: uppercase;
+    cursor:pointer;
+    font-family: inherit;
   }
   .btn-ghost{ background: rgba(255,255,255,.02); color: rgba(0,255,102,.72); border-color: rgba(0,255,102,.16); }
 
+  .grid{ display:grid; grid-template-columns:1fr; gap:12px; margin-top:12px; }
+  @media(min-width:860px){ .grid{ grid-template-columns: 1fr 1fr; } }
+
   .ad{
-    border-radius: 18px; border:1px dashed rgba(0,255,102,.28);
+    border-radius: 18px;
+    border:1px dashed rgba(0,255,102,.28);
     background: rgba(0,0,0,.38);
-    padding: 16px; color: rgba(0,255,102,.58);
-    letter-spacing:.10em; text-transform: uppercase;
-    text-align:center; min-height: 120px;
+    padding: 16px;
+    color: rgba(0,255,102,.58);
+    letter-spacing:.10em;
+    text-transform: uppercase;
+    text-align:center;
+    min-height: 120px;
     display:flex; align-items:center; justify-content:center;
     position:relative; z-index:1;
   }
-  .mini{ margin-top: 14px; text-align:center; color: rgba(0,255,102,.55); letter-spacing:.10em; text-transform: uppercase; font-size: 11px; position:relative; z-index:1; }
+  .mini{
+    margin-top: 12px;
+    text-align:center;
+    color: rgba(0,255,102,.55);
+    letter-spacing:.10em;
+    text-transform: uppercase;
+    font-size: 11px;
+    position:relative; z-index:1;
+  }
+
+  .scenario{
+    border-radius:18px;
+    border:1px solid rgba(0,255,102,.18);
+    background: rgba(0,0,0,.36);
+    padding: 12px;
+    position:relative; z-index:1;
+  }
+  .scenario .t{
+    font-size:12px;
+    letter-spacing:.12em;
+    text-transform:uppercase;
+    color: rgba(0,255,102,.9);
+    margin: 0 0 8px;
+  }
+  .scenario .d{
+    font-size:12px;
+    letter-spacing:.06em;
+    color: rgba(0,255,102,.75);
+    line-height:1.5;
+    margin: 0 0 10px;
+  }
 </style>
 </head>
 <body>
 <div class="wrap">
 
   <div class="card">
-    <h1>Tap404 Incident Report</h1>
-    <p class="sub">Diagnostic summary — visual disturbance simulation</p>
-    <span class="stamp">YOU’VE BEEN TAPPED</span>
+    <h1>Full Report</h1>
+    <p class="sub">Visual glitch simulation — harmless</p>
+    <span class="stamp">YOU’RE SAFE 😈</span>
 
     <p class="p">
-      That whole “incident” was a <b>Tap404 glitch show</b> — a harmless prank page designed to look dramatic.
-      It doesn’t access your photos, files, contacts, or device data.
+      What you saw was a browser-based <b>glitch show</b> designed to look dramatic.
+      It cannot access your photos, contacts, messages, microphone, or camera.
     </p>
 
     <div class="safe">
-      ✅ <b>You’re safe.</b> Nothing was hacked.<br>
-      If it got you… you’re allowed to get someone else 😈
+      ✅ Nothing was hacked.<br>
+      ✅ No device data was touched.<br>
+      ✅ It’s just animations + sound in a webpage.
     </div>
 
     <div class="row">
-      <button class="btn" id="passItOn">PASS IT ON 😈</button>
-      <button class="btn btn-ghost" id="runAgain">RUN AGAIN</button>
+      <button class="btn" id="shareBtn">SEND TO SOMEONE</button>
+      <button class="btn btn-ghost" id="runAgain">RUN IT AGAIN</button>
     </div>
 
-    <div class="mini">Pass it on shares the surprise link (the prank page).</div>
+    <div class="mini">Tip: don’t warn them. Curiosity does the work.</div>
   </div>
 
   <!-- AD SLOT 1 -->
   <div class="card">
-    <h1 style="font-size:16px; margin:0 0 8px; letter-spacing:.14em; position:relative; z-index:1;">Sponsored</h1>
+    <h1 style="font-size:16px; margin:0 0 8px;">Sponsored</h1>
     <div class="ad">AD SLOT (AdSense)</div>
-    <div class="mini">Replace this with your AdSense code once approved.</div>
+    <div class="mini">Place your AdSense code here once approved.</div>
   </div>
 
-  <div class="card">
-    <h1 style="font-size:16px; margin:0 0 8px; letter-spacing:.14em; position:relative; z-index:1;">Try my games</h1>
-    <p class="sub">If you like chaos + quick fun</p>
-    <div class="row">
-      <button class="btn" id="btnOverrun">OVERUN</button>
-      <button class="btn" id="btnDarts">DARTS MASTER</button>
+  <div class="grid">
+    <!-- Stickiness: “Try another scenario” (not “more pranks”) -->
+    <div class="card">
+      <h1 style="font-size:16px; margin:0 0 8px;">Try another scenario</h1>
+      <p class="sub">Same vibe — different sequence</p>
+
+      <div class="scenario">
+        <div class="t">Scenario A</div>
+        <div class="d">Short, sharp glitch burst. Great for groups.</div>
+        <button class="btn" data-scn="./">RUN</button>
+      </div>
+
+      <div class="scenario" style="margin-top:10px;">
+        <div class="t">Scenario B</div>
+        <div class="d">More popups + flashes. Still quick.</div>
+        <button class="btn" data-scn="./p/scenario-b/">RUN</button>
+      </div>
+
+      <div class="scenario" style="margin-top:10px;">
+        <div class="t">Scenario C</div>
+        <div class="d">Minimal text, maximum chaos.</div>
+        <button class="btn" data-scn="./p/scenario-c/">RUN</button>
+      </div>
+
+      <div class="mini">You can rename these later — keep them vague.</div>
     </div>
-    <p class="p" style="margin-top:12px;">
-      Downloads + ads inside the games help support more projects like this.
+
+    <!-- AD SLOT 2 -->
+    <div class="card">
+      <h1 style="font-size:16px; margin:0 0 8px;">Sponsored</h1>
+      <div class="ad">AD SLOT (AdSense)</div>
+      <div class="mini">Second slot helps RPM once traffic grows.</div>
+
+      <div style="margin-top:14px;" class="scenario">
+        <div class="t">While you’re here…</div>
+        <div class="d">My games help support new projects.</div>
+        <div class="row" style="margin-top:10px;">
+          <button class="btn" id="btnOverrun">OVERUN</button>
+          <button class="btn" id="btnDarts">DARTS MASTER</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <h1 style="font-size:16px; margin:0 0 8px;">Creator note</h1>
+    <p class="p" style="margin-top:8px;">
+      Built by <b>Jworldcreations</b>. More “scenarios” coming.
     </p>
-  </div>
-
-  <!-- AD SLOT 2 -->
-  <div class="card">
-    <h1 style="font-size:16px; margin:0 0 8px; letter-spacing:.14em; position:relative; z-index:1;">Sponsored</h1>
-    <div class="ad">AD SLOT (AdSense)</div>
-    <div class="mini">Second slot for better RPM once traffic grows.</div>
-  </div>
-
-  <div class="card">
-    <h1 style="font-size:16px; margin:0 0 8px; letter-spacing:.14em; position:relative; z-index:1;">Creator</h1>
-    <p class="p" style="margin-top:8px;">Built by <b>Jworldcreations</b>. More games/tools incoming (including Wiser Today).</p>
+    <div class="mini">If you want, I can add a tiny FAQ to reduce bounces even more.</div>
   </div>
 
 </div>
 
 <script>
+  // ===== CONFIG =====
+  const ROOT = "https://xstajayx.github.io/message-media-space/";
   const OVERUN_URL = "https://play.google.com/store/apps/details?id=com.jworldcreations.overrun";
   const DARTS_URL  = "https://play.google.com/store/apps/details?id=com.jworldcreations.dartsmaster";
 
-  // Share the SURPRISE link (prank page), not the report page:
-  const PRANK_URL = "https://xstajayx.github.io/phone-prank/";
+  // Run again
+  document.getElementById("runAgain").addEventListener("click", () => {
+    location.href = ROOT; // back to main scenario
+  });
 
-  document.getElementById("passItOn").addEventListener("click", async () => {
-    // Keep it subtle so it doesn't scream “prank”
+  // Scenario RUN buttons
+  document.querySelectorAll("[data-scn]").forEach(btn=>{
+    btn.addEventListener("click", ()=>{
+      const path = btn.getAttribute("data-scn");
+      location.href = new URL(path, ROOT).toString();
+    });
+  });
+
+  // Share: share the PRANK page (not the report)
+  document.getElementById("shareBtn").addEventListener("click", async () => {
     const shareData = {
-      title: "System Alert",
+      title: "Wait… is this real?",
       text: "Can you check this for me?",
-      url: PRANK_URL
+      url: ROOT
     };
-
     if (navigator.share) {
-      try { await navigator.share(shareData); } catch(e) {}
+      try { await navigator.share(shareData); } catch(e){}
     } else {
       try{
-        await navigator.clipboard.writeText(PRANK_URL);
+        await navigator.clipboard.writeText(ROOT);
         alert("Link copied.");
       }catch(e){
-        prompt("Copy this link:", PRANK_URL);
+        prompt("Copy this link:", ROOT);
       }
     }
   });
 
-  document.getElementById("runAgain").addEventListener("click", () => {
-    window.location.href = "./index.html";
-  });
-
-  document.getElementById("btnOverrun").addEventListener("click", () => window.open(OVERUN_URL, "_blank"));
-  document.getElementById("btnDarts").addEventListener("click", () => window.open(DARTS_URL, "_blank"));
+  // Games
+  document.getElementById("btnOverrun").addEventListener("click", ()=> window.open(OVERUN_URL, "_blank"));
+  document.getElementById("btnDarts").addEventListener("click", ()=> window.open(DARTS_URL, "_blank"));
 </script>
 </body>
 </html>
